# Numerical-Stochastic-Calculus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Ultimate_NASODE_Guide.ipynb  install_deps.sh
HAs/Serie1/: Normal.m
HAs/Serie10/: VarianceGamma.m
HAs/Serie11/: EulerMaruyamaCauchySDE.m  EulerMaruyamaGammaSDE.m  EulerMaruyamaLevySDE.m
HAs/Serie4/: ErrorEM.m  EulerMaruyama.m  EulerMaruyamaGL.m  EulerMaruyamaGLEstimator.m  TamedEulerMaruyamaEstimator.m  TamedEulerMaruyamaGL.m
HAs/Serie5/: DriftImplicitMilstein.m  DriftImplicitMilsteinPlot.m  Milstein1D.m  Milstein_SDE1.m  Milstein_SDE2.m
HAs/Serie6/: EMMultiDim.m  ErrorEM2dGBM.m  ErrorEMWeak.m  ErrorEMWeak2.m  ErrorMilsteinWeak.m  EulerMaruyama.m  Milstein1D.m
HAs/Serie7/: EM_Heston_solution.m  ErrorEMRichardsonWeak.m  MCCIPlot.m  MCCIPlot2.m  MCEstimatorCI.m
HAs/Serie8/: MCERichardsonExtrapolation.m  MonteCarloEuler.m  MonteCarloEulerBSCall.m  MonteCarloEulerHestonCall1.m  MonteCarloEulerHestonCall2.m
HAs/Serie9/: MLMCvsMCEBSCall.m  MultiLevelMonteCarlo.m  MultiLevelMonteCarloBSCall.m
Solution Sheet 1/: Poisson.m  PoissonPlot.m
source/: main.cpp
source/modules/linalg/: CMakeLists.txt
source/modules/linalg/inc/: matrix_impl.h  vector_impl.h
source/modules/linalg/inc/linalg/: algorithms.h  matrix.h  ops.h  spline.h  vector.h
source/modules/linalg/src/: algorithms.cpp  matrix.cpp  ops.cpp  spline.cpp  vector.cpp
source/modules/plotter/: CMakeLists.txt
source/modules/plotter/inc/: plotter_impl.h
source/modules/plotter/inc/plotter/: plotter.h
source/modules/plotter/src/: plotter.cpp
source/modules/rnd/: CMakeLists.txt
source/modules/rnd/inc/rnd/: bm.h  random.h
source/modules/rnd/src/: bm.cpp  random.cpp
theory/s2/: BMBridgeInterp.m  BMIncInterp.m  BMPlot.m
tools/utils/: build_dep.sh  eigen.sh  mpp.sh
